--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -236,12 +236,13 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/tv_buynow"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
                 android:padding="15dp"
-                android:textSize="16dp"
+                android:textSize="18dp"
                 android:text="Mua hàng"
                 android:textStyle="bold"
                 android:background="#D1D1D1" />
