--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -266,7 +266,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:background="#AAA" />
+                        android:background="#D1D1D1" />
 
 
                     <RelativeLayout
@@ -298,7 +298,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:background="#AAA" />
+                        android:background="#D1D1D1" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -367,7 +367,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:background="#AAA" />
+                    android:background="#D1D1D1" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -441,7 +441,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:background="#AAA" />
+                    android:background="#D1D1D1" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -457,12 +457,13 @@ Phải nhấn mạnh là Redmi 9 là sản phẩm hiếm hoi trong phân khúc c
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
-                    android:background="#AAA" />
+                    android:background="#D1D1D1" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:layout_marginTop="1dp"
                     android:padding="15dp"
                     android:text="Xem thêm"
                     android:textColor="@color/orange"
@@ -549,6 +550,7 @@ Phải nhấn mạnh là Redmi 9 là sản phẩm hiếm hoi trong phân khúc c
         android:padding="15dp">
 
         <ImageView
+            android:id="@+id/back"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
@@ -599,6 +601,7 @@ Phải nhấn mạnh là Redmi 9 là sản phẩm hiếm hoi trong phân khúc c
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/chat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
