--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -6,18 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="#E1E1E1">
+
     <RelativeLayout
         android:id="@+id/top_nav"
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="60dp">
-<ImageView
-    android:layout_width="35dp"
-    android:layout_height="35dp"
-    android:layout_marginLeft="20dp"
-    android:layout_centerVertical="true"
-    android:src="@drawable/ic_baseline_search_24"
-    app:tint="@color/orange"/>
+        android:layout_height="60dp"
+        android:background="@color/white">
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/ic_baseline_search_24"
+            app:tint="@color/orange" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
