--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -15,6 +15,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/back"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
