--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:itemTextColor="@drawable/change_color_nav"
         app:menu="@menu/menu" />
 
-    <androidx.viewpager.widget.ViewPager
+    <com.shopee.CustomViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
