--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,8 +39,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_marginTop="2dp"
+                android:layout_marginRight="20dp"
                 android:background="@drawable/border"
                 android:orientation="horizontal"
                 android:padding="10dp">
@@ -49,8 +49,8 @@
                     android:id="@+id/barcode"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:padding="5dp"
                     android:layout_gravity="center_vertical"
+                    android:padding="5dp"
                     android:src="@drawable/ic_scan" />
 
                 <View
@@ -60,32 +60,36 @@
                     android:layout_marginRight="15dp"
                     android:background="#9F9F9F" />
 
-                    <RelativeLayout
-                        android:layout_weight="1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
-                        <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_marginRight="5dp"
-                            android:src="@drawable/logo_airpay" />
-                        <TextView
-                            android:id="@+id/airpay"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="25dp"
-                            android:textColor="#000"
-                            android:text="đ 100.000" />
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:textSize="12sp"
-                            android:layout_below="@id/airpay"
-                            android:text="Scan &amp; Pay Voucher" />
-                    </RelativeLayout>
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginRight="5dp"
+                        android:padding="3dp"
+                        android:background="#1487E3"
+                        android:src="@drawable/logo_airpay" />
+
+                    <TextView
+                        android:id="@+id/airpay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="25dp"
+                        android:layout_weight="1"
+                        android:text="đ 100.000"
+                        android:textColor="#000" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/airpay"
+                        android:layout_weight="1"
+                        android:text="Scan &amp; Pay Voucher"
+                        android:textSize="12sp" />
+                </RelativeLayout>
 
 
                 <View
@@ -96,30 +100,32 @@
                     android:background="#9F9F9F" />
 
                 <RelativeLayout
-                    android:layout_weight="1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginRight="5dp"
                         android:src="@drawable/ic_coin" />
+
                     <TextView
                         android:id="@+id/coin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginLeft="25dp"
-                        android:textColor="#000"
-                        android:text="100.000 Xu" />
+                        android:layout_weight="1"
+                        android:text="100.000 Xu"
+                        android:textColor="#000" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textSize="12sp"
                         android:layout_below="@id/coin"
-                        android:text="Đổi xu lấy mã giảm giá" />
+                        android:layout_weight="1"
+                        android:text="Đổi xu lấy mã giảm giá"
+                        android:textSize="12sp" />
                 </RelativeLayout>
 
 
@@ -163,50 +169,54 @@
                 android:layout_marginRight="8.5dp"
                 android:background="#ee4e2e"
                 android:orientation="vertical">
+
                 <LinearLayout
-                    android:paddingTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal"
 
-                    android:orientation="horizontal">
+                    android:paddingTop="10dp">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="SẢN PHẨM BÁN CHẠY"
                         android:layout_marginLeft="20dp"
-                        android:textColor="@color/white"/>
+                        android:text="SẢN PHẨM BÁN CHẠY"
+                        android:textColor="@color/white" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
                         android:text="Xem thêm"
-                        android:textSize="14sp"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
+
                     <ImageView
                         android:layout_width="15dp"
                         android:layout_height="15dp"
                         android:layout_gravity="center_vertical"
-                        android:padding="2dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="10dp"
-                        android:src="@drawable/ic_next"/>
+                        android:padding="2dp"
+                        android:src="@drawable/ic_next" />
 
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcv_topsale"
                     android:layout_width="match_parent"
-                    android:padding="10dp"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:padding="10dp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -219,6 +229,22 @@
                         android:layout_width="70dp"
                         android:layout_height="25dp"
                         android:src="@drawable/flashsale" />
+
+                    <cn.iwgang.countdownview.CountdownView
+                        android:id="@+id/mycountdown"
+                        style="@style/CustomCountDown"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:isHideTimeBackground="false"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        app:isShowHour="true"
+                        app:isShowMinute="true"
+                        app:isShowSecond="true"
+                        app:isTimeTextBold="true"
+
+                        app:timeBgColor="@color/black"
+                        app:timeTextColor="#FFFFFF"/>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -235,9 +261,9 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="10dp"
-                        app:tint="#89000000"
                         android:padding="2dp"
-                        android:src="@drawable/ic_next" />
+                        android:src="@drawable/ic_next"
+                        app:tint="#89000000" />
 
                 </LinearLayout>
 
@@ -253,29 +279,32 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="DANH MỤC"
                         android:layout_marginLeft="20dp"
-                        android:textColor="#ee4e2e"/>
+                        android:text="DANH MỤC"
+                        android:textColor="#ee4e2e" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="end"
                         android:text="Xem thêm"
-                        android:textSize="14sp"
-                        android:textColor="?attr/colorControlNormal"/>
+                        android:textColor="?attr/colorControlNormal"
+                        android:textSize="14sp" />
+
                     <ImageView
                         android:layout_width="15dp"
                         android:layout_height="15dp"
                         android:layout_gravity="center_vertical"
-                        android:padding="2dp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="10dp"
-                        app:tint="#89000000"
-                        android:src="@drawable/ic_next"/>
+                        android:padding="2dp"
+                        android:src="@drawable/ic_next"
+                        app:tint="#89000000" />
 
                 </LinearLayout>
 
@@ -298,13 +327,14 @@
         android:orientation="horizontal"
 
         android:padding="15dp">
+
         <LinearLayout
             android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal"
+            android:layout_weight="1"
             android:background="@color/white"
-            android:layout_weight="1"   >
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="30dp"
@@ -318,19 +348,19 @@
                 android:id="@+id/edt_search"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@null"
                 android:layout_weight="1"
+                android:background="@null"
                 android:hint="@string/search"
-                android:textSize="14sp"
                 android:maxLines="1"
-                android:paddingLeft="10dp" />
+                android:paddingLeft="10dp"
+                android:textSize="14sp" />
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:padding="5dp"
-                android:layout_marginRight="10dp"
                 android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:padding="5dp"
                 android:src="@drawable/ic_camera" />
 
         </LinearLayout>
