--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -122,7 +122,7 @@
             android:background="#9F9F9F"/>
         <TextView
 
-            android:id="@+id/bt_dangNhap"
+            android:id="@+id/btn_login_dialog"
             android:text="Đăng nhập"
             android:background="#EEE"
             android:textColor="@color/icon_color"
