--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -16,15 +16,24 @@
                 android:id="@+id/layout1"
                 android:background="@color/orange"
                 android:layout_width="match_parent"
-                android:layout_height="150dp">
-
+                android:layout_height="170dp">
+                <ImageView
+                    android:id="@+id/btn_account"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:padding="2dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="20dp"
+                    app:tint="@color/white"
+                    android:layout_marginRight="100dp"/>
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/ic_account"
                     android:background="@drawable/circle_border"
-                    android:layout_marginTop="85dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="20dp"
                     android:layout_marginLeft="10dp"/>
                 <TextView
                     android:id="@+id/bt_dangKy"
@@ -32,16 +41,18 @@
                     android:textColor="@color/orange"
                     android:layout_marginRight="10dp"
                     android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
                     android:layout_width="100dp"
                     android:gravity="center"
                     android:textSize="16sp"
                     android:background="#fff"
-                    android:layout_marginTop="85dp"
+                    android:layout_marginBottom="20dp"
                     android:layout_height="40dp"/>
                 <TextView
                     android:id="@+id/bt_dangNhap"
                     android:layout_marginRight="10dp"
-                    android:layout_marginTop="85dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_alignParentBottom="true"
                     android:textSize="16sp"
                     android:layout_toLeftOf="@id/bt_dangKy"
                     android:text="Đăng nhập"
