--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,7 @@
         <item name="android:windowAnimationStyle">@style/Animation.AppCompat.Dialog</item>
 
     </style>
+    <style name="CustomCountDown">
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
