--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -44,20 +44,21 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/gia_product"
+                    android:id="@+id/gia_km"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="đ 5.412.800 - đ 5.641.000"
                     android:textColor="@color/orange"
-                    android:textSize="16sp" />
+                    android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/gia_km"
+                    android:id="@+id/gia_product"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="đ 5.700.000 - đ 5.999.000"
-                    android:textSize="12sp" />
+                    android:textSize="15sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -76,7 +77,7 @@
                         android:numStars="5"
                         android:progressTint="#F3B929"
                         android:rating="2.5"
-                        android:stepSize="0.5" />
+                        android:stepSize="0.1" />
 
                     <TextView
                         android:id="@+id/rating_product"
@@ -622,6 +623,7 @@ Phải nhấn mạnh là Redmi 9 là sản phẩm hiếm hoi trong phân khúc c
             android:background="#555" />
 
         <ImageView
+            android:id="@+id/add_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
