--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -20,11 +20,10 @@
             android:orientation="vertical">
 
 
-            <androidx.viewpager.widget.ViewPager
+            <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewpager"
-                android:layout_width="wrap_content"
-
-                android:layout_height="280dp" />
+                android:layout_width="match_parent"
+                android:layout_height="320dp" />
 
 
             <LinearLayout
