--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -37,7 +37,7 @@
         android:layout_below="@+id/layout_toobar"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:src="@drawable/shopee_logo"/>
 
@@ -45,10 +45,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/img_logo"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:padding="20dp"
         android:orientation="vertical">
+        <EditText
+            android:id="@+id/edt_name"
+            android:inputType="text"
+            android:maxLines="1"
+            android:layout_width="match_parent"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:drawablePadding="20dp"
+            android:layout_height="wrap_content"
 
+            android:background="@null"
+            android:drawableLeft="@drawable/ic_user"
+            android:hint="Họ và tên"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_margin="5dp"
+            android:background="#9F9F9F"/>
         <EditText
             android:id="@+id/edt_user"
             android:inputType="text"
@@ -74,12 +92,13 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <EditText
-                android:id="@+id/et_pass"
-                android:inputType="number"
+                android:id="@+id/edt_pass"
+                android:inputType="textPassword"
                 android:maxLines="1"
                 android:layout_width="match_parent"
                 android:textSize="16sp"
                 android:layout_weight="1"
+
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:drawableLeft="@drawable/ic_pass"
@@ -94,23 +113,6 @@
                 android:src="@drawable/ic_hiden"
                 app:tint="@color/icon_color"
                 android:padding="5dp"/>
-            <View
-                android:layout_width="0.5dp"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:background="#919191"/>
-
-            <TextView
-                android:id="@+id/tv_forget"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="16sp"
-                android:textColor="#116BB3"
-                android:text="Quên?"/>
-
-
-
 
         </LinearLayout>
 
@@ -119,6 +121,34 @@
             android:layout_height="0.5dp"
             android:layout_margin="5dp"
             android:background="#9F9F9F"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/edt_pass_confirm"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:layout_width="match_parent"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawableLeft="@drawable/ic_pass"
+                android:drawableTint="@color/icon_color"
+                android:padding="10dp"
+                android:drawablePadding="20dp"
+                android:hint="Xác nhận mật khẩu"/>
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_hiden"
+                app:tint="@color/icon_color"
+                android:padding="5dp"/>
+
+        </LinearLayout>
+
         <TextView
 
             android:id="@+id/bt_dangNhap"
@@ -135,7 +165,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_margin="15dp"
             android:text="Hoặc"
             android:layout_gravity="center_horizontal"
             android:textSize="18sp"/>
@@ -143,7 +173,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#0E94FF"
-            android:layout_marginTop="20dp"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="38dp"
