--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -309,19 +309,25 @@
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:paddingLeft="10dp"
                     android:id="@+id/rcv_category2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcv_product"
-                android:layout_marginTop="15dp"
-                android:verticalSpacing="15dp"
-                android:horizontalSpacing="15dp"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:background="#E1E1E1"
+                >
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcv_gridproduct"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
 
         </LinearLayout>
 
