--- a/app/src/main/res/layout/row_product.xml
+++ b/app/src/main/res/layout/row_product.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="180dp"
-
+    android:layout_width="wrap_content"
+    android:layout_margin="5dp"
+    android:background="#FFFFFF"
+    android:layout_weight="1"
     android:layout_height="wrap_content">
+
     <RelativeLayout
+        android:layout_weight="1"
         android:background="#fff"
-        android:layout_width="170dp"
-        android:layout_margin="5dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/anh_SanPham"
+            android:src="@drawable/sp7"
+            android:scaleType="centerCrop"
             android:layout_width="match_parent"
-            android:layout_height="170dp"/>
+            android:layout_height="190dp"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="190dp" />
 
         <TextView
             android:id="@+id/tv_ThongTinSP"
@@ -27,7 +36,7 @@
             android:layout_below="@+id/anh_SanPham"/>
 
         <TextView
-            android:id="@+id/tv_Gia1"
+            android:id="@+id/tv_giaban"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_ThongTinSP"
@@ -37,23 +46,17 @@
             android:text="đ49.607"
             android:textStyle="normal" />
         <TextView
-            android:id="@+id/tv_Gia2"
+            android:id="@+id/tv_giakm"
             android:layout_marginTop="3dp"
             android:layout_marginLeft="10dp"
-            android:layout_below="@id/tv_Gia1"
+            android:layout_below="@id/tv_giaban"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textColor="#F34913"
             android:layout_marginBottom="10dp"
             android:text="đ25.795"/>
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:padding="5dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_addshop"
-            android:layout_alignBottom="@id/tv_Gia2"
-            android:layout_alignParentEnd="true"/>
+
     </RelativeLayout>
-</RelativeLayout>
+
+</LinearLayout>
