--- a/app/src/main/res/layout/row_product.xml
+++ b/app/src/main/res/layout/row_product.xml
@@ -13,43 +13,40 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content">
         <ImageView
-            android:id="@+id/anh_SanPham"
+            android:id="@+id/img_product"
             android:src="@drawable/sp7"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="190dp"/>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="190dp" />
 
         <TextView
-            android:id="@+id/tv_ThongTinSP"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/img_product"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="10dp"
             android:maxLines="2"
-            android:textColor="#000"
             android:text="Kính Mắt Mèo CHốn Tia UV400 Phong Cách Hàn Quốc"
-            android:layout_below="@+id/anh_SanPham"/>
+            android:textColor="#000" />
 
         <TextView
-            android:id="@+id/tv_giaban"
+            android:id="@+id/tv_gia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_ThongTinSP"
+            android:layout_below="@+id/tv_name"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:textSize="10dp"
             android:text="đ49.607"
+            android:textSize="10dp"
             android:textStyle="normal" />
         <TextView
-            android:id="@+id/tv_giakm"
+            android:id="@+id/tv_km"
             android:layout_marginTop="3dp"
             android:layout_marginLeft="10dp"
-            android:layout_below="@id/tv_giaban"
+            android:layout_below="@id/tv_gia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
