--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -323,7 +323,7 @@
                 android:background="#E1E1E1"
                 >
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rcv_gridproduct"
+                    android:id="@+id/rcv_product"
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
