--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -28,6 +28,7 @@
                     android:layout_marginRight="100dp"/>
 
                 <ImageView
+                    android:id="@+id/img_user"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/ic_account"
@@ -35,6 +36,17 @@
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="20dp"
                     android:layout_marginLeft="10dp"/>
+                <TextView
+                    android:id="@+id/tv_user"
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="wrap_content"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_toRightOf="@id/img_user"
+                    android:textColor="#FFF"
+                    android:layout_marginBottom="20dp"
+                    android:layout_height="40dp"/>
                 <TextView
                     android:id="@+id/bt_dangKy"
                     android:text="Đăng ký"
@@ -135,7 +147,7 @@
                 android:id="@+id/recyclerView_CaNhan"
                 android:background="#DDD"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 />
         </RelativeLayout>
