--- a/app/src/main/res/layout/item_topsale.xml
+++ b/app/src/main/res/layout/item_topsale.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/img_topsale"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:src="@drawable/product1"
         android:layout_margin="5dp"/>
 
@@ -21,7 +21,7 @@
         android:id="@+id/tv_gia"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_width="70dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textColor="#ee4e2e"
